# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Added
- [API_PARSER] [CATONETWORKS] New collector
- [API_PARSER] [INFOBLOX_THREAT_DEFENSE] New collector

## [2.19.0] - 2025-01-16
### Added
- [API_PARSER] [CISCO_UMBRELLA-MANAGED-ORG] New collector
- [API_PARSER] [SENTINEL ONE SINGULARITY MOBILE] New collector
- [SYSTEM] [PKI] Add POST, PUT and DELETE requests for APIs
### Changed
- [API_PARSER] [HARFANGLAB] truncate 'rule_content' and 'process_sigma_rule_content' fields if they have more than 16384 characters
- [API_PARSER] [API_BEYONDTRUST_PRA] Add fields
- [DEPENDENCIES]
  - djongo 1.3.6.post5 -> 1.3.7 (corrected)
  - aiohttp 3.9.3 -> 3.10.5
  - aiohappyeyeballs added -> 2.4.4
  - certifi 2024.2.2 -> 2024.12.14
  - cryptography 42.0.5 -> 43.0.1
  - django 4.2.11 -> 4.2.18
  - pyopenssl 24.0.0 -> 25.0.0
  - werkzeug 3.0.1 -> 3.0.3
  - setuptools 69.1.1 -> 70.0.0
### Fixed
- [SYSTEM] [NODE] Uniformize editable fields on API and GUI
- [HTML] [NODE] Show better field errors while editing Node parameters
- [NETWORK] Avoid defining NATing routes using loopback interfaces


## [2.18.0] - 2024-12-18
### Added
- [COMMANDS] New command to update reputation context feeds
### Fixed
- [MONITOR] Avoid wrong node state during monitoring operations
- [API_PARSER] [WAF_CLOUDFLARE] Work with dynamic fields on query
- [API_PARSER] [CROWDSTRIKE] Correctly return an error when test failed on GUI
- [API_PARSER] [CROWDSTRIKE] Don't consider log range to be collected on error
- [API_PARSER] [PROOFPOINT_CASB] Prevent cursor stagnation when no events are received during 24H
- [API_PARSER] [PROOFPOINT_CASB] Retrieve events each 2 minutes to prevent > 1000 queries/day
- [APPLICATIONS] [SERVERS] Correct inability to create 2 servers with the same target:port couple