@@ -77,7 +77,7 @@ from toolkit.api_parser.cisco_umbrella_managed_org.cisco_umbrella_managed_org im
 from toolkit.api_parser.sentinel_one_singularity_mobile.sentinel_one_singularity_mobile import SentinelOneSingularityMobileParser
 from toolkit.api_parser.catonetworks.catonetworks import CatonetworksParser
 from toolkit.api_parser.infoblox_threat_defense.infoblox_threat_defense import InfobloxThreatDefenseParser
-
+from toolkit.api_parser.beyondtrust_reportings.beyondtrust_reportings import BeyondtrustReportingsParser
 
 logging.config.dictConfig(settings.LOG_SETTINGS)
 logger = logging.getLogger('gui')
@@ -135,6 +135,7 @@ PARSER_LIST = {
     "sentinel_one_singularity_mobile": SentinelOneSingularityMobileParser,
     "catonetworks": CatonetworksParser,
     "infoblox_threat_defense": InfobloxThreatDefenseParser,
+    "beyondtrust_reportings": BeyondtrustReportingsParser,
 }
 
 class ParserDoesNotExist(Exception):
